src/Tests/Spectre.Console.Cli.Tests/Expectations/Parsing/LongOptionNameIsOneCharacter/Test_1.Output.verified.txt
Error: Invalid long option name.

       dog --f
           ^^^ Did you mean -f?